# omero-ontop-mappings

./: .gitattributes  .gitignore  .gitmodules  Dockerfile.ci  LICENSE  README.md  README.org  __readme__.backup.md  deploy.sh  deployment_cookiecutter.sh  idr_r2rml.ttl  prepare_obda_template.py  pyproject.toml  queries.org  requirements.txt  run_test_infra_ontop.sh  tutorial.org
ci_utils/: insert_data.sh  install_omero-py.sh  omero-ontop.sh  portmapping.patch
docs/: qlever_docs.md
hack24/: catalog-v001.xml  omemap.obda  omemap.properties  run_ontop.sh
idr/: idr.properties
mpi_sandbox/: omemap.obda  omemap.ttl  queries.org  run_ontop_localhost.sh
mpieb/: catalog-v001.xml  lenses.json  lenses_sql.json  omemap.obda  omemap.properties  omemap.ttl  omero-test-infra.properties  queries.org  run_ontop_localhost.sh
omero-ontop-mappings/: catalog-v001.xml  core.owl.ttl  ome_core.ttl  omero-ontop-mappings.obda  omero-ontop-mappings.properties  omero-ontop-mappings.ttl  omero-ontop.sh  omero-test-infra.properties  omero-test-infra.properties.template  portal.toml
omeswat/: catalog-v001.xml  omeswat-ontop-endpoint.sh  omeswat-ontop-materialize.sh  omeswat.obda  omeswat.properties  portal.toml
ontop/: omemap.obda  omemap.properties  omemap.ttl  run_test_infra_ontop.sh  test_infra.properties
owl/: dublin_core_terms.ttl  model.owl.ttl
qlever/: Qleverfile  Qleverfile-ui-wikidata.yml  Qleverfile-ui.yml  add_extra_backend.sh  examples.json  launch_qlever-ui-mpiebkg.sh  reindex_ome_data.sh  setup_wikidata-proxy.sh  start_qlever.sh
sql/: admin.org  ontop_user.sql  (+1 more)
(+61 files in other folders)
