[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omero-ontop-mappings"
version = "0.1"
description = "Placeholder pyproject.toml for omero-ontop-mappings"
dependencies = [
  "rdflib",
  "omero-py"
]

[tool.setuptools]
packages=["omero_ontop_mappings"]
py-modules=["__init__"]

